WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255033
Web Inspector: Console: timestamps are always wrong
https://bugs.webkit.org/show_bug.cgi?id=255033
Summary
Web Inspector: Console: timestamps are always wrong
Devin Rousso
Reported
2023-04-05 08:20:29 PDT
1. log any message 2. compare to time on your computer
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-05 08:20:45 PDT
<
rdar://problem/107660054
>
Jasmine
Comment 2
2023-04-14 11:01:01 PDT
I was able to reproduce this bug on macOS. It does not reproduce on Windows. It looks like there's an issue with how MonotonicTime::now() is implemented for OS(DARWIN):
https://github.com/WebKit/WebKit/blob/main/Source/WTF/wtf/CurrentTime.cpp#L265-L266
At 6:41 PM I output the following: mach_absolute_time(): 2410267093664 fromMachAbsoluteTime(mach_absolute_time()): Monotonic(100427.795617 sec) MonotonicTime::now(): Monotonic(100427.795629 sec) Seconds(MonotonicTime::now().secondsSinceEpoch()): 100427.795569 sec Converting 100427.795617 seconds to a timestamp yielded 19:53:47.795 When I commented out the OS(DARWIN) implementation of MonotonicTime::now() and tested again at 6:46 PM I got the correct timestamp of 18:46:54.921
Devin Rousso
Comment 3
2023-04-14 14:58:35 PDT
very odd. id expect more things to be broken if this is that off 🤔 im pretty sure JS `Date` uses `WallTime`. perhaps we should be using that here too?
Devin Rousso
Comment 4
2023-04-16 19:54:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12782
EWS
Comment 5
2023-04-21 13:20:44 PDT
Committed
263261@main
(1eb0aa379232): <
https://commits.webkit.org/263261@main
> Reviewed commits have been landed. Closing PR #12782 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug