Web Inspector: Console: timestamps are always wrong https://bugs.webkit.org/show_bug.cgi?id=255033

Reviewed by Patrick Angle.

Use `WallTime` instead of `Monotonic` time since this is a timestamp we expect to display rather than something for comparison (i.e. "was this before that?").

* Source/JavaScriptCore/inspector/ConsoleMessage.h:
* Source/JavaScriptCore/inspector/ConsoleMessage.cpp:
(Inspector::ConsoleMessage::ConsoleMessage):
(Inspector::ConsoleMessage::addToFrontend):
(Inspector::ConsoleMessage::updateRepeatCountInConsole):
* Source/WebCore/page/PageConsoleClient.cpp:
(WebCore::PageConsoleClient::screenshot):

* LayoutTests/inspector/console/timestamp.html: Added.
* LayoutTests/inspector/console/timestamp-expected.txt: Added.

Canonical link: https://commits.webkit.org/263261@main